--- a/client/app/login/login.html
+++ b/client/app/login/login.html
@@ -3,7 +3,7 @@
 </header>
 <main>
     <div class="login  center-block">
-        <h3>Login SonicWall</h3>
+        <h3>Login xxx</h3>
         <form role="form">
             <div class="form-group row">
                 <label for="username">Username</label>
