--- a/client/app/login/login.html
+++ b/client/app/login/login.html
@@ -1,5 +1,5 @@
 <header>
-    <div class="logo"><span>xxx</span></div>
+    <div class="logo"><span>test</span></div>
 </header>
 <main>
     <div class="login  center-block">
