--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
 <body>
     <my-app>Loading...</my-app>
 </body>
+<script type="text/javascript" src="http://localhost:8080/dist/vendor.bundle.js"></script>
+<script type="text/javascript" src="http://localhost:8080/dist/app.bundle.js"></script>
+
 
 </html>
