--- a/client/app/admin/main.html
+++ b/client/app/admin/main.html
@@ -1,6 +1,10 @@
 <div class="header" role="banner">
     <div class="container clearfix">
-        <a href="" class="header-logo">header-logo</a>
+        <a href="" class="header-logo">
+            <span>user-</span>
+            "admin"
+        </a>
+        <a href="" class="collapse-menu-link ion-navicon"></a>
         <div class="header-search"></div>
         <ul role="navigation" class="header-nav float-left">
             <li class="header-nav-item">
@@ -19,4 +23,4 @@
 
 </div>
 <div role="main"></div>
-<div role=""></div>
+<div role="footer"></div>
