--- a/client/app/admin/main.html
+++ b/client/app/admin/main.html
@@ -1,8 +1,7 @@
 <div class="header" role="banner">
     <div class="container clearfix">
         <a href="" class="header-logo">
-            <span>user-</span>
-            "admin"
+            <span>user-</span> "admin"
         </a>
         <a href="" class="collapse-menu-link ion-navicon"></a>
         <div class="header-search"></div>
