--- a/client/app/admin/pages/forms/layoutBasicForm/layoutBasicForm.html
+++ b/client/app/admin/pages/forms/layoutBasicForm/layoutBasicForm.html
@@ -1,14 +1,16 @@
-<form>
-    <div class="form-group">
-        <label for="exampleInputEmail1">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
-    </div>
-    <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-    </div>
-    <div class="checkbox">
+<wm-card title="Layout Basic Form">
+    <form>
+        <div class="form-group">
+            <label for="exampleInputEmail1">Email address</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+        </div>
+        <div class="form-group">
+            <label for="exampleInputPassword1">Password</label>
+            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        </div>
+        <div class="checkbox">
 
-    </div>
-    <button type="submit" class="btn btn-danger">Submit</button>
-</form>
+        </div>
+        <button type="submit" class="btn btn-danger">Submit</button>
+    </form>
+</wm-card>
