--- a/client/app/admin/pages/forms/ratingInputs/ratingInputs.html
+++ b/client/app/admin/pages/forms/ratingInputs/ratingInputs.html
@@ -1,9 +1,17 @@
-<div class="col-md-4">
-    <rating [(ngModel)]="_rate1" max="{{_max1}}" stateOn="ion-android-star" stateOff="ion-android-star-outline" class="rating"></rating>
-    <span class="help-block">Rate: {{_rate1}}</span>
-</div>
+<wm-card title="Rating Inputs">
 
-<div class="col-md-8">
-    <rating [(ngModel)]="_rate2" max="{{_max2}}" stateOn="ion-ios-heart" stateOff="ion-ios-heart-outline" class="rating"></rating>
-    <span class="help-block">Rate: {{_rate2}}</span>
-</div>
+    <div class="row">
+        <div class="col-md-4">
+            <rating [(ngModel)]="_rate1" max="{{_max1}}" stateOn="ion-android-star" stateOff="ion-android-star-outline" class="rating"></rating>
+            <span class="help-block">Rate: {{_rate1}}</span>
+        </div>
+
+        <div class="col-md-8">
+            <rating [(ngModel)]="_rate2" max="{{_max2}}" stateOn="ion-ios-heart" stateOff="ion-ios-heart-outline" class="rating"></rating>
+            <span class="help-block">Rate: {{_rate2}}</span>
+        </div>
+
+    </div>
+
+
+</wm-card>
