--- a/client/app/admin/pages/forms/checkBoxesAndRadios/checkBoxesAndRadios.html
+++ b/client/app/admin/pages/forms/checkBoxesAndRadios/checkBoxesAndRadios.html
@@ -2,20 +2,20 @@
     <div class="checkbox-demo-row">
         <div class="input-demo checkbox-demo row">
             <div class="col-md-4">
-                <label class="check-inline custom-check nowrap">
-                    <input type="checkbox" name="inlinecheckChecks" id="inlinecheck1" value="check1">
+                <label class="checkbox-inline custom-checkbox nowrap">
+                    <input type="checkbox" name="inlinecheckboxChecks" id="inlinecheckbox1" value="check1">
                     <span>check 1</span>
                 </label>
             </div>
             <div class="col-md-4">
-                <label class="check-inline custom-check nowrap">
-                    <input type="checkbox" name="inlinecheckChecks" id="inlinecheck2" value="check2">
+                <label class="checkbox-inline custom-checkbox nowrap">
+                    <input type="checkbox" name="inlinecheckboxChecks" id="inlinecheckbox2" value="check2">
                     <span>check 2</span>
                 </label>
             </div>
             <div class="col-md-4">
-                <label class="check-inline custom-check nowrap">
-                    <input type="checkbox" name="inlinecheckChecks" id="inlinecheck3" value="Check3">
+                <label class="checkbox-inline custom-checkbox nowrap">
+                    <input type="checkbox" name="inlinecheckChecks" id="inlinecheckbox3" value="Check3">
                     <span>Check3</span>
                 </label>
             </div>
@@ -48,6 +48,13 @@
             <label class="custom-radio nowrap">
                 <input type="radio" name="optionsRadios" id="optionsRadios3" value="option3" disabled>
                 <span>Disabled option</span>
+            </label>
+        </div>
+
+        <div class="checkbox disabled">
+            <label class="custom-checkbox nowrap">
+                <input type="checkbox" name="disableCheckbox" id="disableCheckbox" value="disableCheckbox" disabled>
+                <span>Disabled checkbox</span>
             </label>
         </div>
     </div>
