--- a/client/app/admin/pages/forms/layoutBasicForm/layoutBasicForm.html
+++ b/client/app/admin/pages/forms/layoutBasicForm/layoutBasicForm.html
@@ -8,7 +8,11 @@
             <label for="exampleInputPassword1">Password</label>
             <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
         </div>
-        <div class="checkbox">
+        <div class="checkbox-block">
+            <label class="custom-checkbox nowrap">
+                    <input type="checkbox" name="inlinecheckboxChecks" id="inlinecheckbox1" value="check1">
+                    <span>check me out</span>
+            </label>
 
         </div>
         <button type="submit" class="btn btn-danger">Submit</button>
