--- a/client/app/admin/pages/forms/layoutHorizontalForm/layoutHorizontalForm.html
+++ b/client/app/admin/pages/forms/layoutHorizontalForm/layoutHorizontalForm.html
@@ -14,8 +14,11 @@
         </div>
         <div class="form-group row">
             <div class="offset-sm-2 col-sm-10">
-                <div class="checkbox">
-
+                <div class="checkbox-block">
+                    <label class="custom-checkbox nowrap">
+                    <input type="checkbox" name="inlinecheckboxChecks" id="inlinecheckbox1" value="check1">
+                    <span>check me out</span>
+                </label>
                 </div>
             </div>
         </div>
