--- a/client/app/admin/pages/forms/layoutInlineForm/layoutInlineForm.html
+++ b/client/app/admin/pages/forms/layoutInlineForm/layoutInlineForm.html
@@ -7,7 +7,11 @@
             <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Email">
         </div>
         <div class="form-group">
-            <div class="checkbox">
+            <div class="checkbox-block">
+                <label class="custom-checkbox nowrap">
+                    <input type="checkbox" name="inlinecheckboxChecks" id="inlinecheckbox1" value="check1">
+                    <span>check me out</span>
+                </label>
             </div>
         </div>
         <div class="form-group">
