--- a/client/app/admin/pages/forms/validationStates/validationStates.html
+++ b/client/app/admin/pages/forms/validationStates/validationStates.html
@@ -12,6 +12,30 @@
         <input type="text" class="form-control" id="inputError1">
     </div>
 
+    <div class="checkbox-demo-row">
+        <div class="input-demo checkbox-demo row">
+            <div class="col-md-4 has-success">
+                <label class="checkbox-inline custom-checkbox nowrap">
+                    <input type="checkbox" name="inlinecheckboxChecks" id="inlinecheckbox1" value="check1">
+                    <span>check 1</span>
+                </label>
+            </div>
+            <div class="col-md-4 has-error">
+                <label class="checkbox-inline custom-checkbox nowrap">
+                    <input type="checkbox" name="inlinecheckboxChecks" id="inlinecheckbox2" value="check2">
+                    <span>check 2</span>
+                </label>
+            </div>
+            <div class="col-md-4 has-warning">
+                <label class="checkbox-inline custom-checkbox nowrap">
+                    <input type="checkbox" name="inlinecheckChecks" id="inlinecheckbox3" value="Check3">
+                    <span>Check3</span>
+                </label>
+            </div>
+        </div>
+
+    </div>
+
     <div class="form-group has-success has-feedback">
         <label class="control-label" for="inputSuccess2">Input with success</label>
         <input type="text" class="form-control" id="inputSuccess2" aria-describedby="inputSuccess2Status">
