--- a/client/app/admin/pages/tables/smartTable/smartTable.html
+++ b/client/app/admin/pages/tables/smartTable/smartTable.html
@@ -1,3 +1,5 @@
 <wm-card title="smart table">
-    <ng2-smart-table [settings]="settings" [source]="data"></ng2-smart-table>
+    <div class="ng2-smart-table-container">
+        <ng2-smart-table [settings]="settings" [source]="data"></ng2-smart-table>
+    </div>
 </wm-card>
